--- a/chart.html
+++ b/chart.html
@@ -151,18 +151,7 @@
                 </section>
             </main>
 
-            <footer>
-                <nav>
-                    <nav>
-                        <ul>
-                            <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
-                            <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
-                            <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
-                            <li class="nav_mypage"><a href="config.html"><i class="material-icons">settings</i></a></li>
-                        </ul>
-                    </nav>
-                </nav>
-            </footer>
+            <footer></footer>
     
     </div>
     </body>
@@ -178,7 +167,10 @@
         var selectedStartDate = firstMonthday;
         var selectedEndDate = todayNow;
 
-        /* datas  */
+        /* layout */
+        
+        $('footer').load('tile/footer.html');
+
         /* data */
         let currentUser = { shopname: "로또리치" }
 
