--- a/chart.html
+++ b/chart.html
@@ -30,12 +30,12 @@
     main .chart_board .option .icons {width: 20px; height: 20px; display: block;}
     main .chart_board .option input[type="date"] {background-color: transparent; color: white; border:none; outline: none;text-align: center; padding: 0; font-size: 12px; font-weight: 700; font-family: inherit;}
     main .chart_board .option #year_month {font-size: 16px; font-weight: 900;}
-    main .chart_board .chart {margin: 0 auto; width: 95vw; height: 100%; margin-top: 10px;}
+    main .chart_board .chart {margin: 0 auto; width: 95vw; height: 100%; margin-top: 10px; overflow-y: auto;}
 
    
 
     main .chart_board .chart#tab01 {background-color: white; color: black;}
-    main .chart_board .chart #calendar_table {width: 100%; border: 1px solid black; text-align: center; border-collapse: collapse;}
+    main .chart_board .chart #calendar_table {width: 100%; border: 1px solid black; text-align: center; border-collapse: collapse; margin-top: 8px;}
     main .chart_board .chart #calendar_table tr td {border: 1px solid #efefef; font-size: 8px; color: #aaaaaa; padding-bottom: 30px;}
     main .chart_board .chart #calendar_table tr.ths td {font-size: unset; color: black;  padding-bottom: 0; line-height: 35px;}
 
