--- a/login.html
+++ b/login.html
@@ -2,28 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+        <script src="./js/jquery-3.4.1.min.js"></script>
+        <script src="./js/vue.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <meta name="viewport" content="width=320,minimum-scale=1.0,maximum-scale=4.0,user-scalable=no">
-        <meta name="keywords" content="">			
-        <meta name="description" content="">		
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <link href="./css/style.css" rel="stylesheet">			
         <style>
-            html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px; background-color:#222a35;}
-            #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px;color: white;}
             .logo {margin: 0 auto; width: 100px; padding-top: 80px; text-align: center;}
-            .logo img {width: 80px; height: 80px; border-radius: 10px; background-color: gray;}
+            .logo img {width: 80px; height: 80px; border-radius: 10px;}
 
-            .input_box {display: flex; flex-direction: column; width: 70vw; justify-content: space-between; align-items: center; margin: 0 auto; height: 80px; margin-top: 20px;}
-            .input_box input {width: 100%; height: 30px;}
+            .input_box {display: flex; flex-direction: column; width: 70vw; justify-content: space-between; align-items: center; margin: 0 auto; height: 90px; margin-top: 20px;}
+            .input_box input {width: 100%; border: none; padding: 12px;}
             .check_box {margin: 0 auto; width: 70vw; font-size: 10px; display: flex; justify-content: flex-start; align-items: center; height: 30px;}
-            .submit_btn {margin: 0 auto; width: 70vw; text-align: center; background-color: black; font-size: 12px; padding: 8px; margin-top: 30px;}
+            .submit_btn {margin: 0 auto; width: 70vw; text-align: center; background-color: #cccccc; font-size: 12px; padding: 8px; margin-top: 30px; font-weight: 900;}
             .add_on {margin:0 auto; font-size: 8px; width: 70vw; text-align: center; margin-top: 30px;}
 
-            footer {position: fixed; bottom: 24px; left: 0; font-size: 8px; width: 100vw; text-align: center; color: #777777;}
+            footer {position: absolute; bottom: 24px; left: 0; font-size: 8px; width: 100vw; text-align: center; color: #777777;}
         </style>
     </head>
     <body>
@@ -33,8 +30,8 @@
                 <img src="./img/logo/default.png">
             </section>
             <section class="input_box">
-                <input type="text" placeholder="ID">
-                <input type="password" placeholder="PASSWORD">
+                <input type="text" placeholder="ID" class="shadow">
+                <input type="password" placeholder="PASSWORD" class="shadow">
             </section>
             <section class="check_box">
                 <input type="checkbox"><label>로그인 상태 유지</label>
