--- a/config.html
+++ b/config.html
@@ -46,7 +46,7 @@
             <main>
                 <section class="config_list" style="padding-top: 50px; ">
                     <ul>
-                        <a href="./notice.html">
+                        <a href="./noticelist.html">
                             <li>
                                 <div class="box shadow">
                                     <div class="icons"><img src="img/icon/icon_info.png"></div>
@@ -54,7 +54,7 @@
                                 </div>
                             </li>
                         </a>
-                        <a href="./account.html">
+                        <a href="./accountlist.html">
                             <li>
                                 <div class="box shadow">
                                     <div class="icons"><img src="img/icon/icon_group.png"></div>
