--- a/store.html
+++ b/store.html
@@ -268,7 +268,7 @@
 
                 </script>
 
-                <div id="add_column">
+                <div id="add_column" style="display: none;">
                     <div class="box">
                         <section class="col_head">
                             <div class="title">컬럼추가</div>
