--- a/orders.html
+++ b/orders.html
@@ -22,7 +22,7 @@
         main .order_board .handler ul li {border-radius: 5px; background-color: white; color: black; padding: 16px; display: flex; justify-content: space-between; margin-bottom: 8px;}
         main .order_board .handler ul li.fail {border: 1px solid tomato;}
         main .order_board .handler ul li .handler_value.fail {color: tomato;}
-        .memo_result {padding: 16px; min-height: 300px; font-size: 10px; color: #777777; border-radius: 5px;}
+        .memo_result {padding: 16px; min-height: 300px; font-size: 10px; color: #777777; border-radius: 5px; margin-bottom: 25px;}
         main .order_board .handler .title {padding: 8px; color: #cccccc;}
         main .order_board .order_nav {position: fixed; top:0px; right:0px}
         main .order_board .order_nav img {width: 25px; height: 25px; padding: 10px;}
