--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <li class="shadow" id="sdate">
                         <span class="label">시작일</span>
                         <span class="start_date">{{ start_date }}</span>
-                        <input type="date" id="sdate_picker">
+                        <input type="date" id="sdate_picker" style="display:none">
                     </li>
                     <li class="shadow" id="edate">
                         <span class="label">종료일</span>
@@ -327,6 +327,10 @@
                 $('#shop_info').show();
             }
         }
+
+        $('#sdate').on('click', function(){
+            $('#sdate_picker').focus();
+        })
 
     </script>
 </body>
