--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <li class="shadow" id="sdate">
                         <span class="label">시작일</span>
                         <span class="start_date">{{ start_date }}</span>
-                        <input type="date" id="sdate_picker" style="display:none">
+                        <input type="date" id="sdate_picker" style="visibility: hidden;">
                     </li>
                     <li class="shadow" id="edate">
                         <span class="label">종료일</span>
