--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             </nav>
         </footer>
 
-        <input type="date" style="opacity: 0;" max="9999-12-31" id="sdate_picker" v-model="start_date">
-        <input type="date" style="opacity: 0;" max="9999-12-31" id="edate_picker" v-model="end_date">
+        <input type="date" max="9999-12-31" id="sdate_picker" v-model="start_date">
+        <input type="date" max="9999-12-31" id="edate_picker" v-model="end_date">
 
         <!-- filter -->
         <div id="filter_state" style="display: none;">
