--- a/html/config.html
+++ b/html/config.html
@@ -46,6 +46,7 @@
             <main>
                 <section class="config_list" style="padding-top: 50px; ">
                     <ul>
+                        <!-- 
                         <a href="./noticelist.html">
                             <li>
                                 <div class="box shadow">
@@ -54,15 +55,16 @@
                                 </div>
                             </li>
                         </a>
+                         -->
                         <a href="./accountlist.html">
                             <li>
                                 <div class="box shadow">
                                     <div class="icons"><img src="img/icon/icon_group.png"></div>
-                                    <div class="title">계정관리</div>
+                                    <div class="title">계정 관리</div>
                                 </div>
                             </li>
                         </a>
-                        <a href="./store.html">
+                        <a href="./mystore.html">
                             <li>
                                 <div class="box shadow">
                                     <div class="icons"><img src="img/icon/icon_store.png"></div>
