--- a/html/notice.html
+++ b/html/notice.html
@@ -23,8 +23,10 @@
 
     main .notice_list .notice { margin: 8px auto; width: 95vw;}
     main .notice_list .notice .summary {padding: 16px; border-bottom: 1px solid #efefef;}
-    main .notice_list .notice .summary .title_box .title {font-weight: 700; line-height: 2;}
-    main .notice_list .notice .summary .title_box .title:focus {outline: none;}
+    main .notice_list .notice .summary .title_box {display: flex; justify-content: space-between; align-items: baseline;}
+    main .notice_list .notice .summary .title_box .title {font-weight: 700; line-height: 2; width: 70%;}
+    main .notice_list .notice .summary .title_box .date {color: #aaaaaa;}
+    main .notice_list .notice .summary .title_box 
     main .notice_list .notice .summary .edit {padding-right: 8px; color: #aaaaaa; font-size: 10px;}
     main .notice_list .notice .details {padding: 16px; line-height: 2; font-size: 10px;}
     main .notice_list .notice .precontent {width: 95%; margin: 0 auto; font-size: 10px; font-family: inherit; font-weight: 700; white-space: normal; line-height: 2; border: none; height: 90%; resize: none; background-color: transparent; padding-left: 8px;}
@@ -35,8 +37,7 @@
     main .controller {display: flex; justify-content: space-around; position: fixed; bottom: 0px; width: 100%; background-color: white; padding: 16px 0; font-weight: 900;}
 
 
-    footer nav ul {display: flex; width: 320px; height: 48px; background-color: black; position: fixed; bottom: 0; justify-content: space-around; align-items: center;}
-    footer nav ul li {font-size: 18px;}
+
 
 </style>
     <body>
@@ -45,7 +46,7 @@
             <header>
                 <div class="title">
                     <span class="icons"><a onclick="history.back();"><img src="img/icon/icon_arrow_back.png"></a></span>
-                    <span class="titlename">2020-04-04</span>
+                    <span class="titlename">공지사항</span>
                 </div>
             </header>
 
@@ -57,6 +58,7 @@
                         <div class="summary">
                             <div class="title_box">
                                 <span class="title">폼 설정하시는 방법</span>
+                                <span class="date">2020-04-01</span>
                             </div>
                         </div>
 
@@ -66,26 +68,6 @@
 
                     </div>
                 </section>
-
-                <section class="controller">
-                    <a onclick="saveNotice();"><div class="save">저장</div></a>
-                    <a onclick="deleteNotice();"><div class="del">삭제</div></a>
-                </section>
-                <script>
-                    function saveNotice(){
-                        if(confirm('변경된 내용을 저장할까요?')){
-                            alert('저장하였습니다.');
-                        }
-                    };
-    
-                    function deleteNotice(){
-                        if(prompt('"삭제확인"을 입력해주세요')=="삭제확인"){
-                            alert('삭제하였습니다');
-                        }else{
-                            alert('삭제하지 못했습니다.');
-                        };
-                    };
-                </script>
             </main>
     
     </div>
