--- a/html/index.html
+++ b/html/index.html
@@ -159,7 +159,7 @@
                 </div>
 
                 <ul>
-                    <a href="'./orders.html?pid=?">
+                    <a href="orders.html?pid=?">
                         <li class="shadow"> <!-- 주문의 class와 bind -->
                             <span class="state">대기</span> <!-- 주문의 상태 -->
                             <span class="date">2020-04-01, 16:17:48</span> <!-- 주문 생성 시간 -->
